# scripts

./: .envrc  .gitignore  Cargo.toml  Makefile  TODO.md  install.py  pyproject.toml  requirements.txt  test_bins.sh
src/check_convergence/: Cargo.toml
src/check_convergence/src/: cli.rs  lib.rs  main.rs  reader.rs
src/check_convergence/src/reader/: force.rs  util.rs
src/check_ef/: Cargo.toml
src/check_ef/src/: energy_reader.rs  force_reader.rs  lib.rs  main.rs  types.rs
src/chgdiff/: Cargo.toml
src/chgdiff/src/: lib.rs  main.rs
src/chgdiff/tests/: integration_test.rs
src/kpointsgen/: Cargo.toml
src/kpointsgen/src/: main.rs
src/libscripts/: Cargo.toml
src/libscripts/src/: lib.rs  periodic_table.rs  structure.rs
src/libscripts/src/io/: xyz.rs
src/libscripts/src/parser/: mod.rs  oszicar.rs  outcar.rs  poscar.rs
src/ndstat/: Cargo.toml
src/ndstat/src/: main.rs
src/pos2pot/: Cargo.toml  README.md
src/pos2pot/data/: potcar.json
src/pos2pot/src/: lib.rs  main.rs  poscar.rs  potcar.rs
src/qst/: Cargo.toml
src/qst/src/: lib.rs  main.rs
src/vasp-slurm-generator/: Cargo.toml
src/vasp-slurm-generator/src/: main.rs
src/write_xyz_traj/: Cargo.toml
src/write_xyz_traj/src/: main.rs
